--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "tar": "^6.1.13",
+    "text-encoding-utf-8": "^1.0.2",
     "ts-node": "^10.9.1"
   }
 }
