--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-big-calendar": "^0.38.3",
     "@types/react-dom": "18.0.10",
     "antd": "^5.1.6",
+    "axios": "^1.3.4",
     "ical.js": "^1.5.0",
     "isomorphic-unfetch": "^4.0.2",
     "next": "13.1.6",
