--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
