--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-bootstrap": "^2.7.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
@@ -30,6 +32,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/react-datepicker": "^4.10.0",
     "ical": "^0.8.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
