--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ical": "^0.8.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "pegjs": "^0.10.0",
     "tar": "^6.1.13",
     "text-encoding-utf-8": "^1.0.2",
     "ts-node": "^10.9.1"
