--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "18.2.0",
+    "sass": "^1.61.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
