--- a/package.json
+++ b/package.json
@@ -7,37 +7,38 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --colors"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
+    "@types/react": "^18.2.47",
     "@types/react-big-calendar": "^0.38.3",
-    "@types/react-dom": "18.0.10",
-    "antd": "^5.1.6",
+    "@types/react-dom": "^18.2.18",
+    "antd": "^5.12.8",
     "fast-xml-parser": "^4.1.2",
-    "fflate": "^0.7.4",
+    "fflate": "^0.8.1",
     "ical.js": "^1.5.0",
     "js-untar": "^2.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-big-calendar": "^1.5.2",
+    "react-big-calendar": "^1.8.6",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.4.0",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "ical": "^0.8.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "pegjs": "^0.10.0",
-    "tar": "^6.1.13",
+    "tar": "^6.2.0",
     "text-encoding-utf-8": "^1.0.2",
-    "ts-node": "^10.9.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2"
   }
 }
