--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
     "test": "jest --colors"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
-    "@types/react": "^18.2.47",
-    "@types/react-big-calendar": "^0.38.3",
-    "@types/react-dom": "^18.2.18",
-    "antd": "^5.12.8",
-    "fast-xml-parser": "^4.1.2",
-    "fflate": "^0.8.1",
-    "ical.js": "^1.5.0",
+    "@next/font": "^14.2.15",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.2",
+    "@types/react-big-calendar": "^1.16.0",
+    "@types/react-dom": "^19.0.2",
+    "antd": "^5.22.7",
+    "fast-xml-parser": "^4.5.1",
+    "fflate": "^0.8.2",
+    "ical.js": "^2.1.0",
     "js-untar": "^2.0.0",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-big-calendar": "^1.8.6",
-    "react-dom": "18.2.0",
-    "typescript": "^5.3.3"
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-big-calendar": "^1.17.1",
+    "react-dom": "^19.0.0",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "ical": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "pegjs": "^0.10.0",
-    "tar": "^6.2.0",
+    "tar": "^7.4.3",
     "text-encoding-utf-8": "^1.0.2",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   }
 }
